--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
     "next": "latest",
+    "node-fetch": "^3.1.0",
     "react": "latest",
     "react-dom": "latest",
     "swr": "^1.1.1"
