--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@prisma/client": "^3.6.0",
     "next": "latest",
     "node-fetch": "^3.1.0",
     "react": "latest",
@@ -25,6 +26,7 @@
     "@types/react": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "prisma": "^3.6.0",
     "typescript": "latest"
   }
 }
