--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/styles": "^5.2.3",
     "@supabase/supabase-js": "^1.29.1",
     "next": "latest",
     "node-fetch": "^3.1.0",
