--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^1.29.1",
     "next": "latest",
     "node-fetch": "^3.1.0",
+    "notistack": "^2.0.3",
     "react": "latest",
     "react-dom": "latest",
     "swr": "^1.1.1"
