--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "build-mobile": "next build && next export && npx cap sync"
   },
   "dependencies": {
+    "@capacitor/core": "^3.3.3",
+    "@capacitor/ios": "^3.3.3",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
     "@emotion/server": "latest",
@@ -25,6 +29,7 @@
     "swr": "^1.1.1"
   },
   "devDependencies": {
+    "@capacitor/cli": "^3.3.3",
     "@types/react": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
